syntax = "proto3";
package pbHello;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string reply = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse){}
}